# RealWorldGameMaps

./: .gitignore  LICENSE  README.md
data/: generated.txt
data/tiff/: GeoTIFF-Samples.txt  small.tif  t.tif
data/warzone2100/: 8c-Mero_SquaredV11.wz  dinit.bjo
data/warzone2100/8c-Mero_SquaredV11/: 8c-Mero_SquaredV11.addon.lev  multiplay\maps\8c-Mero_SquaredV11\feat.bjo
data/warzone2100/8c-Mero_SquaredV11/multiplay/maps/8c-Mero_SquaredV11/: game.map  struct.bjo
docs/0ad/: Scenario_file_formats.md
nodejs/: index.mjs  package-lock.json  package.json  tiff.mjs
nodejs/src/: AsciiMapDrawer.mjs  MapEditor.mjs  MapObject.mjs  MapReader.mjs  MapWriter.mjs
nodejs/src/tiff/: Constants.mjs  TiffReader.mjs
rust/: .clippy.toml  .editorconfig  .rustfmt.toml  Cargo.toml  README.md
rust/src/: 0ad.rs  file_reader.rs  file_utils.rs  file_writer.rs  main.rs  warzone2100.rs
rust/src/warzone2100/: defs.rs  map_reader.rs  map_writer.rs  mod.rs
