[package]
name = "real-world-game-maps"
version = "0.0.1"
authors = ["Thomas Rupprecht <rupprecht.thomas@gmail.com>"]
edition = "2018"
description = "Create game-maps from real world data"
license = "MIT"

[dependencies]
bincode = "1.3.1"
compress-tools = "0.9.0"
nom = "6.1.0"
serde = "1.0.123"
tempfile = "3.2.0"
tiff = "0.6.1"
zip = "0.5.9"
