[package]
name = "real-world-game-maps"
version = "0.0.1"
authors = ["Thomas Rupprecht <rupprecht.thomas@gmail.com>"]
edition = "2018"
description = "Create game-maps from real world data"
license = "MIT"

[dependencies]
bincode = "1.3"
compress-tools = "0.11"
nom = "6.1"
serde = "1.0"
tempfile = "3.2"
tiff = "0.6"
zip = "0.5"
chrono = "0.4"
